# docs/swagger.json
@@ -796,6 +796,51 @@
                 }
             }
         },
+        "user.Account": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "expiresAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "provider": {
+                    "type": "string"
+                },
+                "providerId": {
+                    "type": "string"
+                },
+                "refreshToken": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "userID": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.AuthMethod": {
+            "type": "string",
+            "enum": [
+                "credentials",
+                "google",
+                "github"
+            ],
+            "x-enum-varnames": [
+                "Credentials",
+                "Google",
+                "Github"
+            ]
+        },
         "user.BatchDeleteRequest": {
             "type": "object",
             "required": [
@@ -839,9 +884,25 @@
                 }
             }
         },
+        "user.RoleType": {
+            "type": "string",
+            "enum": [
+                "regular",
+                "admin",
+                "superUser"
+            ],
+            "x-enum-varnames": [
+                "Regular",
+                "Admin",
+                "SuperUser"
+            ]
+        },
         "user.UpdateRequest": {
             "type": "object",
             "properties": {
+                "authMethod": {
+                    "$ref": "#/definitions/user.AuthMethod"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -857,6 +918,9 @@
                 "picture": {
                     "type": "string"
                 },
+                "role": {
+                    "$ref": "#/definitions/user.RoleType"
+                },
                 "verifiedEmail": {
                     "type": "boolean"
                 }
@@ -865,6 +929,15 @@
         "user.User": {
             "type": "object",
             "properties": {
+                "accounts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/user.Account"
+                    }
+                },
+                "authMethod": {
+                    "$ref": "#/definitions/user.AuthMethod"
+                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -882,6 +955,9 @@
                 },
                 "picture": {
                     "type": "string"
+                },
+                "role": {
+                    "$ref": "#/definitions/user.RoleType"
                 },
                 "updatedAt": {
                     "type": "string"
